--- a/rs-backend/Cargo.toml
+++ b/rs-backend/Cargo.toml
@@ -15,4 +15,5 @@ serde_json = "1.0.88"
 tower-http = {version = "0.3.5", features = ["fs", "trace"]}
 tokio = { version = "1.23.0", features = ["full"] }
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
-chrono = "0.4.23"
+futures = "0.3.25"
+tokio-icmp-echo = "0.4.1"
